--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,9 @@
-
+.no-data {
+  font-size: 1.5rem;
+  font-weight: 200;
+  padding: 3rem 0;  
+  margin-left: 1rem;
+}
 
 .App {
   text-align: center;
@@ -58,16 +63,46 @@
 
 
 Button {
-  width: 100%;
+  width: 10%;
+  float: right;
+  background: none;
 }
 
 .btn-primary {
   background-color: #54b3d6 !important;
+  border-radius: 10rem !important;
+  height: 4rem !important;
+  float: right !important;
+  font-weight: 600 !important;
+  font-size: 1.2rem !important;
+  position: fixed !important;
+
+  bottom: 3rem;
+  box-shadow: 0 8px 24px 0 rgb(0 0 0 / 23%), 0 6px 20px 0 rgb(0 0 0 / 29%) !important;
+  transition: box-shadow 500ms !important;
+
+  transition: background 250ms ease-in-out !important;
+  /* height: 4rem;
+  
+  bottom: 0px !important;
+  left: 0 !important;
+  width: 0 !important;
+  box-shadow: 0 8px 24px 0 rgb(0 0 0 / 23%) !important;
+  background-image: linear-gradient(
+    to right,
+    rgb(192, 78, 78) 50%,
+    rgb(192, 78, 78) 50%,
+    #54b3d6 50%
+  ) !important; */
+
+
+  
 }
 
 .btn-primary:hover {
   background-color: #196581 !important;
 }
+
 
 .action-col {
   width: 8%;
