--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -62,47 +62,86 @@
 }
 
 
-Button {
-  width: 10%;
-  float: right;
-  background: none;
-}
+/******************************** BUTTON STYLES *********************************************/
 
-.btn-primary {
-  background-color: #54b3d6 !important;
-  border-radius: 10rem !important;
+Button {
   height: 4rem !important;
-  float: right !important;
   font-weight: 600 !important;
   font-size: 1.2rem !important;
-  position: fixed !important;
+  
+}
 
-  bottom: 3rem;
+
+.glow-on-hover {
+  width: 220px;
+
   box-shadow: 0 8px 24px 0 rgb(0 0 0 / 23%), 0 6px 20px 0 rgb(0 0 0 / 29%) !important;
-  transition: box-shadow 500ms !important;
-
-  transition: background 250ms ease-in-out !important;
-  /* height: 4rem;
-  
-  bottom: 0px !important;
-  left: 0 !important;
-  width: 0 !important;
-  box-shadow: 0 8px 24px 0 rgb(0 0 0 / 23%) !important;
-  background-image: linear-gradient(
-    to right,
-    rgb(192, 78, 78) 50%,
-    rgb(192, 78, 78) 50%,
-    #54b3d6 50%
-  ) !important; */
-
-
-  
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #111 !important;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
 }
 
-.btn-primary:hover {
-  background-color: #196581 !important;
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
 }
 
+.glow-on-hover:active {
+  color: #000
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
+}
+
+.floating-btn {
+  position:fixed !important;
+  bottom:3rem !important;
+  right: 6rem !important;
+}
+
+.fa-circle-plus {
+  margin-right: 1rem;
+}
 
 .action-col {
   width: 8%;
@@ -117,6 +156,21 @@ Button {
   margin-bottom: 1rem;
 }
 
+.modal-btns {
+  margin-top: 1rem;
+  color: white !important;
+  float: right;
+}
+
+.cancel-btn {
+  height: 3rem;
+  border: none !important;
+  margin-right: 1rem;
+}
+
+.add-btn {
+  color: white !important;
+}
 /*********************** LINKS *******************************************/
 a {
 
