--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -9,6 +9,7 @@
   padding: 0.5rem 0rem;
   background-color: #fff;
   margin-bottom: 4rem;
+  margin-top: 4rem;
 }
 .logo-section {
     text-align: center;
