--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -29,24 +29,31 @@
 
 .navigation-menu {
     margin-left: auto;
+    display: flex;
+    align-items: center;
+    padding: 0;
 }
 
+.navigation-menu a {
+    margin: 0 1rem;
+    display: inline-block;
+}
+
+/*
 .navigation-menu ul {
     display: flex;
     padding: 0;
 }
 .navigation-menu li {
-    /* removes default disc bullet for li tags and applies margin to left & right side */
     list-style-type: none;
     margin: 0 1rem;
 }
 .navigation-menu li a {
-    /* increases the surface area of the anchor tag to span more than just the anchor text */
     text-decoration: none;
     display: block;
     width: 100%;
 }
-
+*/
 
 @media screen and (max-width: 768px) {
 
