--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -39,7 +39,13 @@
     display: inline-block;
 }
 
-/*
+.logout-btn {
+    height: 40px !important;
+    font-size: 16px !important;
+    margin-left: 16px;
+}
+
+
 .navigation-menu ul {
     display: flex;
     padding: 0;
