--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -42,7 +42,7 @@
 .logout-btn {
     height: 40px !important;
     font-size: 16px !important;
-    margin-left: 16px;
+    margin-left: 2rem;
 }
 
 
