--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,9 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Inter');
 
+
+body {
+  font-family: 'Inter';
+} */
 
 .no-data {
   font-size: 1.5rem;
@@ -10,7 +15,7 @@
 .App {
   text-align: center;
   margin: auto;
-  width: 90%;
+  width: 80%;
   /* padding-top: 50px; */
 }
 
@@ -89,6 +94,7 @@
   position: relative;
   z-index: 0;
   border-radius: 10px;
+  
 }
 
 .glow-on-hover:before {
@@ -141,23 +147,18 @@
 
 .floating-btn {
   position:fixed !important;
-  bottom:4rem !important;
-  right: 5rem !important;
+  bottom:5rem !important;
+  right: 10rem !important;
 }
 
-i {
-  margin-right: 1rem;
-}
 
 .action-col {
   text-align: center;
 }
 
 .action-links {
-  padding-left: 3rem;
   display: inline-block;
 }
-
 
 
 .modal-btns {
@@ -222,6 +223,7 @@ Table {
 
 .jobTable>thead>tr>th {
   padding: 24px 16px;
+  font-weight: 700;
 }
 
 .preserve-nl {
