--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap'); */
+
+
 
 
 body {
   margin: 0;
-  font-family: 'Inter';
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased; */
+  font-family: 'Inter', sans-serif;
+  -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
 }
 
