--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,5 +1,4 @@
 
-
 h1 {
     margin-top: 2rem;
     text-align: center;
@@ -18,4 +17,9 @@ Form.signup, Form.login {
 
 .login-btn {
     width: 100% !important
+}
+
+.auth-error {
+    padding-top: 1.5rem;
+    color:crimson;
 }
