Changed link hover color to green

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -201,7 +201,7 @@ a {
     to right,
     rgb(192, 78, 78) 50%,
     rgb(192, 78, 78) 50%,
-    #54b3d6 50%
+    #38bd8a 50%
   );
   cursor: pointer;
   background-size: 200% 100%;
