--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -184,9 +184,11 @@ body {
 }
 
 .cancel-btn {
-  height: 3rem;
+  height: 4rem;
   border: none !important;
-  margin-right: .5rem;
+  border-radius: 10px !important;
+  margin-right: .8rem;
+  font-size: 1.2rem !important;
 }
 .update-btn {
   width: 120px !important;
