--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,7 +26,7 @@ body {
 }
 
 .App {
-  text-align: center;
+  /* text-align: center; */
   margin: auto;
   width: 90%;
   /* padding-top: 50px; */
