--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -1,5 +1,16 @@
 .filter-area select {
-    width: 25%;
+    display: inline-block;
+    width: 230px;
     padding: 16px;
+    margin-bottom: 3rem;
     font-size: 16px;
+   
+}
+
+.filter-label {
+    display: inline;
+    text-align: left;
+    font-weight: 500;
+    margin-left: 1rem;
+    margin-right: 3rem;
 }
