--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -14,3 +14,80 @@
     margin-left: 1rem;
     margin-right: 3rem;
 }
+
+
+/******************************** BUTTON STYLES *********************************************/
+
+
+.glow-on-hover {
+    width: 220px;
+    height: 4rem !important;
+    font-weight: 600 !important;
+    font-size: 1.2rem !important;
+    border-radius: 10px !important;
+    box-shadow: 0 8px 24px 0 rgb(0 0 0 / 23%), 0 6px 20px 0 rgb(0 0 0 / 29%) !important;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: black !important;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    float: right;
+  }
+  
+  .glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+  }
+  
+  .glow-on-hover:active {
+    /* color: #54b3d6 */
+    color: black;
+  }
+  
+  .glow-on-hover:active:after {
+    background: transparent;
+  }
+  
+  .glow-on-hover:hover:before {
+    opacity: 1;
+  }
+  
+  .glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: black;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
+  
+  @keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+  }
+  
+  .floating-btn {
+    position:fixed !important;
+    bottom:5rem !important;
+    right: 6rem !important;
+  }
+  
