--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,9 +1,11 @@
+.login {
+    text-align: center;
+}
 
 h1 {
     margin-top: 2rem;
     text-align: center;
 }
-
 
 
 /*********************** Auth Forms **********************/
