--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap');
 
+/* App.css */
+
 
 body {
   margin: 0;
@@ -17,64 +19,19 @@ body {
 }
 
 
+
+.App {
+  margin: auto;
+  width: 90%;
+}
+
+
+/* -------------------- Table ---------------------------*/
+
 .no-data {
   font-size: 1.5rem;
   font-weight: 200;
   margin-left: 2rem;
-}
-
-.App {
-  /* text-align: center; */
-  margin: auto;
-  width: 90%;
-  /* padding-top: 50px; */
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.navigation {
-  background-color: transparent !important;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.add-job {
-  width: 50%;
-  margin: auto;
-  text-align: center;
-  padding-bottom: 15rem; 
-
-}
-
-.title {
-  margin-bottom: 36px;
-  margin-top: 50px;
 }
 
 .form-control {
@@ -113,13 +70,16 @@ body {
   margin-right: .8rem;
   font-size: 1.2rem !important;
 }
+
 .update-btn {
   width: 120px !important;
 }
+
 .add-btn {
   color: white !important;
 }
-/*********************** LINKS *******************************************/
+
+/*-------------------------------- LINKS --------------------------------*/
 a {
 
   background-image: linear-gradient(
@@ -171,7 +131,22 @@ Table {
   white-space: pre-line;
 }
 
-/**************** ADD JOB STYLES *******************/
+/*----------------------- ADD JOB STYLES -----------------------*/
+
+.add-job {
+  width: 60%;
+  max-width: 600px;
+  margin: auto;
+  text-align: center;
+  padding-bottom: 15rem; 
+  padding-top: 5rem;
+
+}
+
+.title {
+  padding-bottom: 2rem;
+}
+
 .error {
   color:crimson;
   font-size: 14px;
@@ -184,7 +159,6 @@ Table {
   color: black !important;
 }
 
-
 .form-control:focus {
   border-color: #54b3d6 !important;
   color: black !important;
@@ -192,7 +166,7 @@ Table {
 }
 
 
-/* ------------------ Back to Top button ---------- */
+/* -------------------- Back to Top button ---------------------- */
 
 .back-to-top {
   width: 60px !important;
